# clonescouncil

./: .gitignore  README.md  package-lock.json  package.json
app/: page.tsx
backend/: README.md  __init__.py  chat_service.py  config.py  conftest.py  example.py  logging_config.py  main.py  personality_researcher.py  pyproject.toml  tavily_extract_demo.py  tavily_search_demo.py  test_api_endpoints.py  test_integration.py  test_personality_researcher.py
components/ui/: avatar.tsx  scroll-area.tsx  textarea.tsx
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
src/: conversation.ts  server.ts  voiceboard.ts  workflow.ts
